test-ui/ui/add_method_no_bool.stderr
error[E0277]: the trait bound `bool: Encode` is not satisfied
   --> ui/add_method_no_bool.rs
    |
    |     builder.add_method(sel!(myBoolTakingMethod:), method);
    |             ----------                            ^^^^^^ the trait `Encode` is not implemented for `bool`
    |             |
    |             required by a bound introduced by this call
    |
    = help: the following other types implement trait `Encode`:
              &'a T
              &'a mut T
              ()
              *const T
              *const c_void
              *mut T
              *mut c_void
              AtomicI16
            and 157 others
    = note: required for `unsafe extern "C" fn(&objc2::runtime::Object, objc2::runtime::Sel, bool)` to implement `MethodImplementation`
note: required by a bound in `ClassBuilder::add_method`
   --> $WORKSPACE/objc2/src/declare.rs
    |
    |         F: MethodImplementation<Callee = T>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `bool: Encode` is not satisfied
   --> ui/add_method_no_bool.rs
    |
    |     builder.add_method(sel!(myBoolReturningMethod), method);
    |             ----------                              ^^^^^^ the trait `Encode` is not implemented for `bool`
    |             |
    |             required by a bound introduced by this call
    |
    = help: the following other types implement trait `Encode`:
              &'a T
              &'a mut T
              ()
              *const T
              *const c_void
              *mut T
              *mut c_void
              AtomicI16
            and 157 others
    = note: required for `unsafe extern "C" fn(&objc2::runtime::Object, objc2::runtime::Sel) -> bool` to implement `MethodImplementation`
note: required by a bound in `ClassBuilder::add_method`
   --> $WORKSPACE/objc2/src/declare.rs
    |
    |         F: MethodImplementation<Callee = T>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`
